--- a/.github/workflows/starter.yaml
+++ b/.github/workflows/starter.yaml
@@ -2,6 +2,8 @@ name: workflows starter
 on:
   push: {}
   workflow_dispatch: {}
+permissions:
+  packages: write
 jobs:
   setup_workflow_env:
     runs-on: ubuntu-latest
